--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ Thumbs.db
 /backend/__pycache__
 /backend/routers/__pycache__
 /backend/services/__pycache__
+backend/db/.env
+/backend/db/__pycache__
