--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nasahackathon2025",
   "version": "0.1.0",
   "dependencies": {
+    "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
