added get by id for articles. fixed .env template

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,2 @@
-DB_HOST = ''
-DB_PORT = ''
-DB_NAME = ''
-DB_USER = ''
-DB_PASSWORD = ''
+SUPABASE_URL = 'YOUR_SUPABASE_URL'
+SUPABASE_KEY = 'YOUR_SUPABASE_API_KEY'
